# zcode

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  USAGE.md
.zcode/tasks/: 69c40aee.json  69c40aef.json  69c40af0.json  69c40af1.json  69c40af2.json  69c40af3.json  69c40af4.json  69c40af5.json  69c40af6.json  69c40af7.json  69c40af8.json  69c40af9.json  69c40afa.json  69c40afb.json  69c40afc.json  69c40afd.json  69c40afe.json  69c40aff.json  69c40b00.json  69c40b01.json  69c40b02.json  69c40b03.json  69c40b04.json  69c40b05.json  69c40b06.json  69c40b07.json
docs/: review-checklist.md  validation.md
docs/harness/: PROCESS.md
docs/plans/: 2026-03-19-implement-core-logic.md  2026-03-19-phase2-core-features.md  2026-03-19-zcode-design.md  2026-03-20-phase2-code-intelligence.md
docs/prd/: 001-core-agent.md
docs/skills/: rust-conventions.md
docs/specs/: coding.spec.md
docs/tasks/: 001-docs-validation.tasks.md
example/: run.sh
example/.zcode/tasks/: 69c4117e.json  69c411d8.json  69c414e2.json  69c41552.json  69c41610.json
example/docs/: review-checklist.md  validation.md
example/docs/prd/: 001-feature.md
example/docs/specs/: coding.spec.md
example/docs/tasks/: 001-feature.tasks.md
src/: agent.rs  error.rs  lib.rs  llm.rs  main.rs  tools.rs
src/agent/: bus.rs  coder.rs  loop_exec.rs  mod.rs  orchestrator.rs  planner.rs  reviewer.rs  traits.rs  types.rs
src/ast/: grammar.rs  language.rs  mod.rs  parser.rs
src/cli/: args.rs  commands.rs  mod.rs
src/config/: mod.rs  settings.rs
src/docs/: mod.rs
src/git/: diff.rs  mod.rs
src/llm/: mod.rs  provider.rs  streaming.rs  tool_call.rs
src/lsp/: client.rs  mod.rs
src/mcp/: client.rs  mod.rs  types.rs
src/memory/: context.rs  mod.rs  project.rs  semantic.rs  working.rs
src/script/: engine.rs  hooks.rs  javascript.rs  lua.rs  manager.rs  mod.rs  python.rs  shell.rs
src/session/: mod.rs  snapshot.rs
src/skills/: mod.rs
src/task_store/: mod.rs
src/tools/: ast_tools.rs  file.rs  file_ops.rs  glob.rs  mod.rs  search.rs  shell.rs
src/tui/: chat.rs  mod.rs
src/workspace/: mod.rs
templates/: README.md  prd.template.md  review-checklist.template.md  skill.template.md  spec.template.md  tasks.template.md  validation.template.md
tests/: cli_test.rs  grammar_integration.rs  registry_test.rs  reviewer_integration.rs  scripting_integration.rs  workspace_integration.rs
