[package]
name = "zcode"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
walkdir = "2.4"
futures = "0.3"

[dev-dependencies]
tempfile = "3.9"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
